# octagon-vc-agents

./: Dockerfile  README.md  pyproject.toml  smithery.yaml
.cursor/rules/: WIP.mdc  notes.mdc
src/agents_mcp_server/: __main__.py  cli.py  server.py
src/agents_mcp_server/investors/: alfred_lin.md  bill_gurley.md  fred_wilson.md  josh_kopelman.md  keith_rabois.md  marc_andreessen.md  mark_andreessen.md  peter_thiel.md  reid_hoffman.md
src/octagon-vc-agents/: __main__.py
src/octagon-vc-agents/investors/: josh_kopelman.md  peter_thiel.md
src/octagon_vc_agents/: cli.py  openai_agents.py  server.py
src/octagon_vc_agents/investors/: alfred_lin.md  bill_gurley.md  fred_wilson.md  josh_kopelman.md  keith_rabois.md  marc_andreessen.md  peter_thiel.md  reid_hoffman.md
